--- a/index.html
+++ b/index.html
@@ -45,29 +45,28 @@
                          <img src="assets/images/mbr-122x116.png" alt="Development Games Studio" title="Development Games Studio" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://discord.gg/pknnWM6">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
                         Development Games Studio
                     </a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://discord.gg/pknnWM6">
+                    <a class="nav-link link text-white display-4" href="https://development-games-studio.github.io/strona/">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+                        Strona główna</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://discord.gg/pknnWM6">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        Pomoc</a>
+                        skrypty</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://nieposiadamy.com">Pobierz aplikacje</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">Pobierz aplikacje</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
