--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                          <img src="assets/images/mbr-122x116.png" alt="Development Games Studio" title="Development Games Studio" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://discord.gg/pknnWM6">
                         Development Games Studio
                     </a></span>
             </div>
@@ -57,16 +57,16 @@
                         Strona główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://discord.gg/pknnWM6">
+                    <a class="nav-link link text-white display-4" href="https://development-games-studio.github.io/glowna/skrypty.html">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         skrypty</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">Pobierz aplikacje</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://nieposiadamy.com">Pobierz aplikacje</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
