--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         Strona główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://development-games-studio.github.io/glowna/skrypty.html">
+                    <a class="nav-link link text-white display-4" href="skrypty.html">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         skrypty</a>
                 </li></ul>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
