--- a/skrypty.html
+++ b/skrypty.html
@@ -57,7 +57,7 @@
                         Strona główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://development-games-studio.github.io/glowna/skrypty.html">
+                    <a class="nav-link link text-white display-4" href="skrypty.html">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         skrypty</a>
                 </li></ul>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-s4mvIs8O1g" id="header16-5">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-s4mvIs8O1g" id="header16-5">
 
     
 
