--- a/pluginy.html
+++ b/pluginy.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="services5 cid-s4r7nWXYCc" id="services5-9">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="services5 cid-s4r7nWXYCc" id="services5-9">
     <!---->
     
     <!---->
