--- a/pluginy.html
+++ b/pluginy.html
@@ -52,7 +52,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">
+                    <a class="nav-link link text-white display-4" href="strona.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Strona główna</a>
                 </li>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="services5 cid-s4r7nWXYCc" id="services5-9">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="services5 cid-s4r7nWXYCc" id="services5-9">
     <!---->
     
     <!---->
