--- a/skrypty.html
+++ b/skrypty.html
@@ -52,7 +52,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">
+                    <a class="nav-link link text-white display-4" href="strona.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Strona główna</a>
                 </li>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-s4mvIs8O1g" id="header16-5">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header1 cid-s4mvIs8O1g" id="header16-5">
 
     
 
