--- a/pluginy.html
+++ b/pluginy.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="services5 cid-s4r7nWXYCc" id="services5-9">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="services5 cid-s4r7nWXYCc" id="services5-9">
     <!---->
     
     <!---->
