--- a/skrypty.html
+++ b/skrypty.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="header1 cid-s4mvIs8O1g" id="header16-5">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-s4mvIs8O1g" id="header16-5">
 
     
 
