--- a/strona.html
+++ b/strona.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
@@ -79,7 +79,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-2"><strong><em>
                     Witaj na naszej stronie</em></strong></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://www.youtube.com/channel/UCTTME1gZWqxq-lSsWaRPQLQ?view_as=subscriber">ZOBACZ WIĘCEJ</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="skrypty.html">ZOBACZ WIĘCEJ</a></div>
             </div>
         </div>
     </div>
