--- a/strona.html
+++ b/strona.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
